force-app/main/default/objects/POS_Revenue__c/POS_Revenue__c.object-meta.xml
<CustomObject>
    <label>POS Revenue</label>
    <nameField>
        <label>POS Revenue  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>POS Revenue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>