force-app/main/default/objects/POS_Revenue__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>POS Revenue</relationshipLabel>
    <relationshipName>POS_Revenue</relationshipName>
    <type>Lookup</type>
</CustomField>