force-app/main/default/objects/POS_Revenue__c/fields/CY_Revenue__c.field-meta.xml
<CustomField>
    <fullName>CY_Revenue__c</fullName>
    <label>CY Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>