force-app/main/default/objects/POS_Revenue__c/fields/POS_Name__c.field-meta.xml
<CustomField>
    <fullName>POS_Name__c</fullName>
    <label>POS Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>