force-app/main/default/objects/POS_Revenue__c/fields/PY_Revenue__c.field-meta.xml
<CustomField>
    <fullName>PY_Revenue__c</fullName>
    <label>PY Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>